{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 9,
  "lineage": "d1d50b7f-4e69-9e13-67e7-54b9ba68f03e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143963637099:vpc/vpc-cbc43aa1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-af18d6c4",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-6015eb0a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-cbc43aa1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d79bebbd",
            "owner_id": "143963637099",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:loadbalancer/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504",
            "arn_suffix": "app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504",
            "dns_name": "terraform-asg-wordpress-lb-jan-1836730820.eu-central-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:loadbalancer/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-wordpress-lb-jan",
            "security_groups": [
              "sg-022e5e4655d6f99b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1c706c61"
              },
              {
                "subnet_id": "subnet-5151f73b"
              },
              {
                "subnet_id": "subnet-deb15292"
              }
            ],
            "subnets": [
              "subnet-1c706c61",
              "subnet-5151f73b",
              "subnet-deb15292"
            ],
            "vpc_id": "vpc-cbc43aa1",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "depends_on": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:listener/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504/30768614bcd64e69",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:listener/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504/30768614bcd64e69",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:loadbalancer/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:targetgroup/terraform-asg-example-jan/a41c45e2c8596cb8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:listener-rule/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504/30768614bcd64e69/f953ffc2ffec7ac2",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:listener-rule/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504/30768614bcd64e69/f953ffc2ffec7ac2",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:listener/app/terraform-asg-wordpress-lb-jan/b19b37d35e54f504/30768614bcd64e69",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.asg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:targetgroup/terraform-asg-example-jan/a41c45e2c8596cb8",
            "arn_suffix": "targetgroup/terraform-asg-example-jan/a41c45e2c8596cb8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:143963637099:targetgroup/terraform-asg-example-jan/a41c45e2c8596cb8",
            "lambda_multi_value_headers_enabled": false,
            "name": "terraform-asg-example-jan",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-cbc43aa1"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143963637099:security-group/sg-022e5e4655d6f99b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022e5e4655d6f99b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb-jan",
            "name_prefix": null,
            "owner_id": "143963637099",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-cbc43aa1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:143963637099:security-group/sg-05246dcf36d2fa15c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05246dcf36d2fa15c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-instance-jan",
            "name_prefix": null,
            "owner_id": "143963637099",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-cbc43aa1"
          }
        }
      ]
    }
  ]
}